Fixed code block text overflow bug

--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -35,6 +35,7 @@
     }
 
     code,
+    .gatsby-highlight,
     .card {
         background-color: $dark !important;
     }
