--- a/src/styles/syntax-highlighting.scss
+++ b/src/styles/syntax-highlighting.scss
@@ -153,10 +153,8 @@ code[class*="language-"] ::selection {
 
 /* Code blocks */
 pre[class*="language-"] {
-    padding: 1em;
-    margin: 0.5em 0;
+    margin: 0;
     overflow: auto;
-    border: 1px solid #dddddd;
     background-color: $white-ter;
 }
 
@@ -165,7 +163,6 @@ pre[class*="language-"] {
     padding: 0.2em;
     padding-top: 1px;
     padding-bottom: 1px;
-    border: 1px solid #dddddd;
 }
 
 .token.comment,
